[JRCLUST (JRC) change log]
J. James Jun

--------------------------------------------------------------------
[2017/11/20: v3.1.6]
Bugfix: Nested S0 struct is removed when older version is loaded.
Drift correction is improved. Three average waveforms are computed by grouping
  spikes from similar center-of-mass. Now using all spikes from the same unit
  previously used spikes that were centered at the peak site only.
New parameter: fSpatialMask_clu (1 by default) applies spatial masking to 
  the features. Half decay length set by the maxDist_site_um.
Added support to import hdf5 dataset from the Ed Boyden lab recordings for 
  paired intracellular recording validation.


[2017/11/5: v3.1.5]
Bugfix: 'jrc describe' failed to report clustering time
Bugfix: Probe file backward compatibility added
  Failed if 'maxSite' exists but 'nSites_ref' doesn't exist in the probe file (.prb)
  Now nSites_ref is computed based on 'maxDist_site_spk_um' (see wiki)
  Probe files are first searched in ./prb/ location and elsewhere if not found
Bugfix: 'jrc update' command now copies sub-folders and backup files correctly
  Previously subfolders didn't get copied and files were not back-up properly.
  **Run 'jrc update' twice to get proper updates, since you need to run a new update script.**

[2017/11/3: v3.1.4]
JRCLUST repository moved to JanalieSciComp
  https://github.com/JaneliaSciComp/JRCLUST

[2017/11/1: v3.1.3]
Bugfix: 'S0' nested saving error fixed. 
Speed improvement: Manual GUI mouse click doesn't slow down over time.

[2017/11/1: v3.1.2]
New parameter: maxDist_site_merge_um = 35 (default).
  Max. distance separation of the peak sites to consider merging based on the unit waveform similarity
Bugfix: auto-merge now computes the self-correlation of the waveform correlation matrix

[2017/10/27: v3.1.1]
Bugfix: PSTH time offset error is removed (0.01 s previously)
Manual GUI: Speed improvement when selecting a unit.
Bugfix: raw waveform display fixed for the manual GUI. 