@@ -1,5 +1,0 @@
-# JRCLUST
-
-[Documentation (GitHub Wiki)](https://github.com/JaneliaSciComp/JRCLUST/wiki)  
-[Requirements and installation](https://github.com/JaneliaSciComp/JRCLUST/wiki/Requirements-and-Installation)  
-[Youtube tutorials](https://github.com/JaneliaSciComp/JRCLUST/wiki/Video-tutorials)  
